--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:md": "remark -q -f .",
     "lint:scss": "sass-lint -v -q",
     "lint:types": "tsc --noEmit",
-    "lint": "npm-run-all lint:md lint:scss lint:js",
+    "lint": "npm-run-all lint:md lint:scss",
     "patterns:create": "node src/component-library/pattern-generator.js",
     "percy": "PERCY=true npm-run-all build --parallel --race start snapshots",
     "postinstall": "npm ci --prefix functions",
